# etr-rl

./: .envrc  .gitignore  NEWS  build.sh  configure  configure.ac  flake.nix  version.rc
data/: credits.lst
data/courses/default/bumpy_ride/: course.dim
data/courses/default/bunny_hill/: course.dim
data/courses/default/challenge_one/: course.dim
data/courses/default/chinese_wall/: course.dim
data/courses/default/chragis_gagiwaetter/: course.dim
data/courses/default/frozen_lakes/: course.dim
data/courses/default/hippo_run/: course.dim
data/courses/default/in_search_of_vodka/: course.dim
data/courses/default/milos_castle/: course.dim
data/courses/default/path_of_daggers/: course.dim
data/courses/default/penguins_cant_fly/: course.dim
data/courses/default/secret_valleys/: course.dim
data/courses/default/this_means_something/: course.dim
data/translations/: Makefile.am  Makefile.in  cs_CZ.lst  de_DE.lst  du_NL.lst  eo.lst  es_ES.lst  fi_FI.lst  fr_FR.lst  it_IT.lst  languages.lst  pl_PL.lst  pt_PT.lst  ro_RO.lst  se_SE.lst  xx_XX.lst
resources/: Makefile.am  Makefile.in  net.sourceforge.extremetuxracer.metainfo.xml
src/: Makefile.am  course.cpp  credits.cpp  credits.h  etr_types.h  font.cpp  game_config.cpp  game_over.cpp  gui.cpp  intro.cpp  loading.cpp  main.cpp  mathlib.cpp  ogl.cpp  particles.cpp  paused.cpp  physics.cpp  physics.h  racing.cpp  score.cpp  states.cpp  states.h  textures.cpp  translation.cpp  version.h
src/rayNEAT/: activation_functions.cpp  connection_gene.cpp  neat.cpp  network.cpp  node_gene.cpp  rayNEAT.h  utility.cpp
(+3 files in other folders)
