
SUBDIRS = gui

metainfofiledir = $(prefix)/share/metainfo
desktopfiledir = $(prefix)/share/applications
icondir = $(prefix)/share/pixmaps

metainfofile_DATA =	\
	net.sourceforge.extremetuxracer.metainfo.xml

desktopfile_DATA =	\
        net.sourceforge.extremetuxracer.desktop

icon_DATA =		\
	etr.png		\
	etr.svg

EXTRA_DIST = 		\
	banner.bmp	\
	dialog.bmp	\
	etracericon.ico	\
	net.sourceforge.extremetuxracer.metainfo.xml	\
	etr.svg	        \
	net.sourceforge.extremetuxracer.desktop	\
	etr.png
